--- a/WhatsApp Web/Practica 2/HTML/index.html
+++ b/WhatsApp Web/Practica 2/HTML/index.html
@@ -303,7 +303,7 @@
                     </div>
                 </a>
 
-                <a href="#chat19"></a>
+                <a href="#chat19">
                     <div class="chat-item">
                         <img src="/Practica 2/Media/user19.png" alt="user" class="chat-avatar">
                         <div class="chat-info">
@@ -318,7 +318,7 @@
                     </div>
                 </a>
 
-                <a href="#chat20"></a>
+                <a href="#chat20">
                     <div class="chat-item">
                         <img src="/Practica 2/Media/user20.png" alt="user" class="chat-avatar">
                         <div class="chat-info">
